--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-- 👋 Hi, I’m @yotam-f
-- 👀 I’m interested in ...
-- 🌱 I’m currently learning ...
-- 💞️ I’m looking to collaborate on ...
-- 📫 How to reach me ...
-
-<!---
-yotam-f/yotam-f is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-You can click the Preview link to take a look at your changes.
---->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> ההורים הכי טובים </title>
+    <link href="style/style.css" type="text/css" rel="stylesheet">
+    <link href="favicon.ico" type="image/icon" rel="icon">
+</head>
+<body>
+    <video src=" img/The best parents.mp4" controls width="40%" ></video>
+    <img class="family" src="img/famly.jpg" width="30%" > 
+    <div> 
+   <h1>ההורים הכי טובים</h1>
+    </div> 
+</body>
+</html
